--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -23,7 +23,7 @@
       deepLink="true"
       source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/tcd2.wacz"
       liveRedirectOnNotFound="true"
-      url="https://chinesedeathscape.supdigital.org/"
+      url="http://chinesedeathscape.supdigital.org/"
       ts="202006025095310">
     </replay-web-page>
   </body>
