--- a/the-chinese-deathscape.html
+++ b/the-chinese-deathscape.html
@@ -17,7 +17,7 @@
       <div class="container"><span class="logo"><img src="./assets/sup_logo.svg"></span><span class="colophon"><img src="./assets/stanford_up_logo.svg" width="50" height="50"></span></div>
     </header>
     <replay-web-page
-      coll="tcd2"
+      coll="tcd"
       config='{"fuzzy": [["http://a.tile.openstreetmap.org/(.*)", "https://a.tile.openstreetmap.org/$1"], ["https?://[bc].tiles.wmflabs.org/(.*)", "http://a.tiles.wmflabs.org/$1"]], "liveRedirectOnNotFound": true}'
       replayBase="./replay/"
       deepLink="true"
