Add note to HiD archive re notes

--- a/harlem-in-disorder.html
+++ b/harlem-in-disorder.html
@@ -17,6 +17,7 @@
       </div>
       <div class="container"><span class="logo"><img src="./assets/sup_logo.svg"></span><span class="colophon"><img src="./assets/stanford_up_logo.svg" width="50" height="50"></span></div>
     </header>
+                          <p>Please note that in the current web archive format, the pop-up inline notes do not work.</p>
     <replay-web-page
       coll="hid"
       config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"]], "liveRedirectOnNotFound": false}'
