--- a/a-world-made-by-travel.html
+++ b/a-world-made-by-travel.html
@@ -18,7 +18,7 @@
       <div class="container"><span class="logo"><img src="./assets/sup_logo.svg"></span><span class="colophon"><img src="./assets/stanford_up_logo.svg" width="50" height="50"></span></div>
     </header>
     <replay-web-page
-      coll="wmt"
+      coll="wmbt"
       config='{"fuzzy": [["(https://aworldmadebytravel.supdigital.org/).*", "$1"]], "liveRedirectOnNotFound": false}'
       replayBase="./replay/"
       deepLink="true"
@@ -30,8 +30,8 @@
     </replay-web-page>
       <h2>Web Archive Limitations</h2>
       <ul>
-          <li>Please note that if you click an image in the book to view it, you will not be able to close it. Instead, you should navigate back in the archive window in order to close it.</li>
-          <li>The filtering, searching, and browsing features of the Explorer are limited. To access the data behind the Explorer, please see the <a href="https://purl.stanford.edu/zw306dd1178" target="_blank">archived datasets</a> in the Stanford Digial Repository.</li>
+          <li>Please note that if you click an image in the book to view it, you will not be able to close it. Instead, you should navigate back in the archive window.</li>
+          <li>The filtering, searching, and browsing features of the Explorer are limited. To access the data behind the Explorer, please see the <a href="https://purl.stanford.edu/zw306dd1178" target="_blank" style="color:darkred; text-decoration:underline">archived datasets</a> in the Stanford Digial Repository.</li>
       </ul>
   </body>
 </html>
